    * FIX: more robust deletion of precompiled files to ensure the correct 
      creation of the files (Thanks to Guido Günther)
    * FIX: Inventory for cluster nodes who are part of multiple clusters 
    * cmk --notify: added plugin for sms notification
    * FIX: precompiled checks: correct handling of sys.exit() call when using python2.4 

    Checks & Agents:
    * winperf_processor now outputs float usage instead of integer
    * FIX: mssql_counters.file_sizes - Fixed wrong value for "Log Files" in output
    * FIX: drbd: Parameters for expected roles and disk states can now be set to 
           None to disable alerting on changed values
    * printer_supply_ricoh: New check for Ricoh printer supply levels
    * jolokia_metrics.mem: now supports warn/crit levels for heap, nonheap, totalheap
    * jolokia_metrics.mem: add dedicated PNP graph
    * FIX: logwatch.ec: use UNIX socket instead of Pipe for forwarding into EC 
    * FIX: logwatch.ec: fixed exception when forwarding "OK" lines
    * FIX: logwatch.ec: fixed forwarding of single log lines to event console
    * Improved performance of logwatch.ec check in case of many messages
    * livestatus_status: new check for monitoring performance of monitoring
    * FIX: diskstat.include: fix computation of queue length on windows
      (thanks to K.H. Fiebig)
    * lnx_bonding: new check for bonding interfaces on Linux
    * ovs_bonding: new check for bonding interfaces on Linux / Open vSwitch
    * if: Inventory settings can now be set host based
    * FIX: lnx_bonding/ovs_bonding: correct definition of bonding.include
    * Add: if check now able to handle interface groups  (if_groups)

    Multisite:
    * Added comment painter to notification related views

    BI:
    * Use Ajax to delay rendering of invisible parts of the tree (this
      saves lots of HTML code)

    WATO:
    * Added hr_mem check to the memory checkgroup to make it configurable in WATO