@@ -10,6 +10,7 @@
     * FIX: Inventory for cluster nodes who are part of multiple clusters 
     * cmk --notify: added plugin for sms notification
     * FIX: precompiled checks: correct handling of sys.exit() call when using python2.4 
+    * cmk --notify: improved logging on wrong notification type
 
     Checks & Agents:
     * winperf_processor now outputs float usage instead of integer
